Layout issue fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,7 @@ i.fa-play-circle, i.fa-pause-circle, i.fa-step-forward, i.fa-step-backward {
     grid-template-columns: auto auto;
     grid-template-rows: 300px;
     grid-gap: 10px;
-    margin: 15em 5em 5em 10em;
+    margin: 5em 5em 5em 10em;
     padding: 10px;
     align-items: ce;
 }
